# MCUs

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMMUNICATION_SUMMARY.md  DUAL_BANK_OTA_SUMMARY.md  MBEDTLS_CONFIGURATION_GUIDE.md  MBEDTLS_ONLY_SETUP_COMPLETE.md  MIGRATION_TO_MBEDTLS.md  NETWORK_SECURITY_SUMMARY.md  OPENSSL_VERSION_VERIFICATION.md  PQC_IMPLEMENTATION_CHECKLIST.md  PQC_PARAMETER_SUPPORT_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_PQC_CONFIG_GUIDE.md  QUICK_START.md  README.md  SYSTEM_OVERVIEW.md  TC375_QUICK_START.md  build.sh
certs/: .gitkeep
common/protocol/: doip_protocol.h  pqc_params.c  pqc_params.h  uds_standard.h
docs/: BOOT_AND_RUNTIME_COMPARISON.md  DOCUMENT_CLEANUP_COMPLETE.md  DOCUMENT_CLEANUP_PLAN.md  FINAL_SUMMARY.md  ISO_13400_specification.md  MBEDTLS_HANDSHAKE_TIMING.md  QUICK_REFERENCE.md  README.md  RECONNECTION_STRATEGY.md  REMOTE_DIAGNOSTICS_USAGE.md  TC375_HSM_INTEGRATION.md  UDS_IMPLEMENTATION_STATUS.md  VMG_DYNAMIC_IP_MANAGEMENT.md  VMG_DYNAMIC_IP_QUICK_START.md  ZG_DUAL_ROLE_RECONNECTION.md  bootloader_build_process.md  bootloader_comparison.md  bootloader_implementation.md  build_example.sh  can_vs_ethernet_ota.md  corrected_architecture.md  data_management.md  doip_tls_architecture.md  dual_bank_ota_detailed.md  dual_bootloader_ota.md  firmware_architecture.md  ota_scenario_detailed.md  protocol.md  safe_ota_strategy.md  tc375_memory_map_corrected.md  tc375_porting.md  vmg_pqc_implementation.md  zonal_gateway_architecture.md
docs/architecture/: pqc_usage_clarification.md  system_overview.md  tls_implementation_status.md  zg_ecu_communication.md
docs/bootloader/: tc375_bootloader_guide.md
docs/diagnostics/: REMOTE_DIAGNOSTICS_ARCHITECTURE.md  UDS_IMPLEMENTATION_STATUS.md  UDS_RESPONSE_IMPLEMENTATION.md
docs/mcu/: tc375_firmware_architecture.md
docs/system/: unified_message_format.md
end_node_ecu/: README.md
end_node_ecu/tc375/bootloader/stage2/: stage2_main.c
end_node_ecu/tc375/include/: ecu_node.h  flash_driver.h  ota_handler.h
end_node_ecu/tc375/src/: ecu_main.c  ecu_node.c  ota_handler.c
scripts/: remove_emojis.py
tc375_bootloader/: AURIX_SETUP_GUIDE.md  README.md  README_DEPRECATION.md  README_DOIP.md  build_bootloader.sh  example_doip_client.c  example_zonal_gateway.c
tc375_bootloader/bootloader/: stage2a_linker.ld  stage2b_linker.ld
tc375_bootloader/common/: boot_common.h  doip_client.c  doip_client.h  doip_message.c  doip_message.h  doip_socket_lwip.c  network_config.h  tc375_ethernet_init.c  tc375_ethernet_init.h  uds_handler.c  uds_handler.h  uds_platform_tc375.c
tc375_bootloader/rtos/: README.md
tc375_bootloader/ssw/: ssw_linker.ld
tc375_bootloader/stage1/: stage1_main.c
tc375_bootloader/stage2/: stage2_linker.ld
tc375_simulator/: CMakeLists.txt  main.cpp  main_pqc_client.cpp
tc375_simulator/config/: device.json  permanent.json
tc375_simulator/include/: device_info.hpp  device_simulator.hpp  ota_manager.hpp  pqc_doip_client.hpp  protocol.hpp  tls_client.hpp  uds_handler.hpp
tc375_simulator/src/: device_info.cpp  device_simulator.cpp  doip_client_mbedtls.cpp  ota_manager.cpp  pqc_doip_client.cpp  protocol.cpp  tls_client.cpp  uds_handler.cpp
tools/: CMakeLists.txt  README.md  pqc_simulator.c
vehicle_gateway/: CMakeLists.txt  CMakeLists_doip.txt  CMakeLists_unified_message.txt  README.md  README_CPP_DOIP.md  README_UNIFIED_MESSAGE.md  build.sh  example_unified_message.cpp  example_vmg_doip_server.cpp  example_vmg_doip_server_mbedtls.cpp
vehicle_gateway/common/: json_output.c  json_output.h  mbedtls_doip.c  mbedtls_doip.h  mbedtls_hsm_config.h  metrics.c  metrics.h  pqc_config.c  pqc_config.h  tc375_hsm_integration.c
vehicle_gateway/config/: README.md
vehicle_gateway/include/: device_info.hpp  doip_server.hpp  mqtt_client_persistent.hpp  pqc_tls_wrapper.hpp  remote_diagnostics_handler.hpp  uds_service_handler.hpp  unified_message.hpp
vehicle_gateway/scripts/: generate_pqc_certs.sh  generate_standard_certs.sh  generate_standard_tls_certs.sh
vehicle_gateway/src/: doip_server.cpp  doip_server_mbedtls.cpp  https_client.cpp  mqtt_client.cpp  pqc_mqtt.c  pqc_tls_client.c  pqc_tls_server.c  remote_diagnostics_handler.cpp  uds_service_handler.cpp  vmg_gateway.cpp
zonal_gateway/: README.md
zonal_gateway/linux/: CMakeLists.txt
zonal_gateway/linux/include/: zonal_gateway_linux.hpp
zonal_gateway/linux/src/: main.cpp  zonal_gateway_linux.cpp
zonal_gateway/tc375/bootloader/: README.md
zonal_gateway/tc375/bootloader/common/: boot_common.h
zonal_gateway/tc375/bootloader/ssw/: ssw_linker.ld  ssw_main.c
zonal_gateway/tc375/bootloader/stage2/: stage2_main.c
zonal_gateway/tc375/include/: diagnostic_router.h  doip_client_mbedtls.h  doip_client_reconnect.h  zonal_gateway.h
zonal_gateway/tc375/src/: diagnostic_router.c  doip_client_mbedtls.c  doip_client_reconnect.c  zonal_gateway.c  zonal_gateway_main.c
